--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.3.61"
+    id 'org.jetbrains.kotlin.multiplatform' version '1.3.72'
     id 'org.jetbrains.dokka' version '0.10.1'
     id 'maven'
     id 'signing'
@@ -17,12 +17,46 @@ repositories {
     jcenter()
 }
 
-dependencies {
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib"
+kotlin {
+    jvm()
+    js()
 
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib"
-    testCompile "org.jetbrains.kotlin:kotlin-test"
-    testCompile 'junit:junit:4.12'
+    sourceSets {
+        commonMain {
+            dependencies {
+                compileOnly 'org.jetbrains.kotlin:kotlin-stdlib-common'
+            }
+        }
+        commonTest {
+            dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-test-common'
+                implementation 'org.jetbrains.kotlin:kotlin-test-annotations-common'
+            }
+        }
+        jvmMain {
+            dependencies {
+                compileOnly 'org.jetbrains.kotlin:kotlin-stdlib'
+            }
+        }
+        jvmTest {
+            dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+                implementation 'org.jetbrains.kotlin:kotlin-test-junit'
+                implementation 'junit:junit:4.12'
+            }
+        }
+        jsMain {
+            dependencies {
+                compileOnly 'org.jetbrains.kotlin:kotlin-stdlib-js'
+            }
+        }
+        jsTest {
+            dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-stdlib-js'
+                implementation 'org.jetbrains.kotlin:kotlin-test-js'
+            }
+        }
+    }
 }
 
 jar {
@@ -136,9 +170,3 @@ wrapper {
     gradleVersion = '6.0'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
-
-compileKotlin {
-    kotlinOptions {
-    }
-}
-
